namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: your-app
  labels:
    name: your-app
