deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment
spec:
  replicas: 2  # Adjust as needed
  selector:
    matchLabels:
      app: secrets-app
  template:
    metadata:
      labels:
        app: secrets-app
    spec:
      serviceAccountName: app-service-account  # For IAM roles (IRSA)
      containers:
      - name: app-container
        image: 255945442255.dkr.ecr.us-east-1.amazonaws.com/rger-pte-repo:latest  # Replace with your Docker image
        ports:
        - containerPort: 80  # Same as ECS task's container port OR 5000 AS PER APP'S
---
# Service (internal LB)
apiVersion: v1
kind: Service
metadata:
  name: app-service
spec:
  selector:
    app: secrets-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP  # Use NodePort/LoadBalancer if needed
